# CPL

./: README.md
c-project/: CMakeLists.txt
c-project/0-intro/: guess.c  hello.c
c-project/1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  scanf-examples.c  sphere.c
c-project/10-struct/: decl.c  echo-flag.c  echo.c  musician.c  sort.c
c-project/11-linkedlist/: josephus.c
c-project/11-linkedlist/ll/: ll.c  ll.h
c-project/12-networking/: ReadMe.md
c-project/12-networking/uppercase/: CMakeLists.txt  uc-client.c  uc-server.c
c-project/2-if-for-array/: CMakeLists.txt  min-of-two.c
c-project/3-for-a-while/: CMakeLists.txt  binary-search.c  palindrome.c  prime.c  selection-sort.c  star.c
c-project/4-loops/: CMakeLists.txt  bubble-sort.c  counting-if.c  game-of-life.c  merge.c
c-project/5-function/: CMakeLists.txt  binary-search-func.c  leap.c  merge-func.c  palindrome-func.c  prime-func.c  selection-sort-func.c
c-project/6-recursion/: CMakeLists.txt  binary-search-re.c  fib-iter.c  fib-re.c  gcd-euclid-re.c  gcd-iter.c  merge-sort.c  min-re.c  sum-re.c
c-project/7-data-types/: CMakeLists.txt  compare.c
c-project/8-pointer/: CMakeLists.txt  ReadMe.md  pointer.c  selection-sort-pointer.c  strlen.c
c-project/9-pointer-more/: CMakeLists.txt  selection-sort-strings.c  strcmp.c  strcpy.c  strlen-more.c
