add_executable(min-re min-re.c)
add_executable(sum-re sum-re.c)
add_executable(fib-re fib-re.c)
add_executable(fib-iter fib-iter.c)
add_executable(gcd-euclid-re gcd-euclid-re.c)
add_executable(gcd-iter gcd-iter.c)
add_executable(binary-search-re binary-search-re.c)
add_executable(merge-sort merge-sort.c)